--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "proptypes": "^1.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
+    "react-cookie": "^4.0.3",
     "react-devtools": "^4",
     "react-dom": "^17.0.2",
     "react-password-strength-bar": "^0.3.3",
