--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "express": "~4.16.1",
     "express-session": "^1.17.1",
     "http-errors": "^1.6.3",
+    "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.4",
